# socks5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-win64.sh  build.sh  memo.md
.github/workflows/: build-release.yml
example/: test.cpp
src/: socks5.cpp  socks5.h  util.cpp  util.h
